--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NewGpt.Ai</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
 <script type="importmap">
 {
   "imports": {
@@ -13,9 +14,11 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "marked": "https://aistudiocdn.com/marked@^17.0.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "marked": "https://aistudiocdn.com/marked@^17.0.1",
+    "highlight.js": "https://aistudiocdn.com/highlight.js@^11.11.1",
+    "marked-highlight": "https://aistudiocdn.com/marked-highlight@^2.2.3"
   }
 }
 </script>
